wake github pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>香山: 开源高性能 RISC-V 处理器</title>
+  <title>XiangShan: An Open Source High Performance RISC-V Processor and Infrastructure for Architecture Research</title>
 
 <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head><body>
