remove deprecated date&location information

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		    <br>
 		</span></h2>
 		</div>
-		<p align="center" ><strong>2021.6.25 周五&#160;<br>
-		    14:00 PM - 17:00 PM&#160;<br>
-		    中国，上海</strong></p></td>
+		<p align="center" ><strong>2023.X.X &#160;<br>
+		    XX:00 PM - XX:00 PM&#160;<br>
+		    XX，XX</strong></p></td>
 	    <td align="center" width="0%">
 		<img src="assets/logo.png" alt="XiangShan logo" height="260" width="353"><br></td>
         </tr>
