--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <br>
 <font face="Helvetica, sans-serif, Arial">
       <table valign="center" align="center" border="0" cellpadding="0" cellspacing="0" width="0">
-        <tbody><tr> 
+        <tbody><tr>
           <td>
 
 <table align="center" border="0" cellpadding="0" cellspacing="0">
@@ -27,8 +27,8 @@
 		    <br>
 		</span></h2>
 		</div>
-		<p align="center" ><strong>2023.3.25 &#160;<br>
-		    Morning&#160;<br>
+		<p align="center" ><strong>2023.3.25 9AM &#160;<br>
+		    9AM&#160;<br>
 		    Vancouver, Canada</strong></p></td>
 	    <td align="center" width="0%">
 		<img src="assets/logo.png" alt="XiangShan logo" height="260" width="353"><br></td>
@@ -40,7 +40,7 @@
 <table valign="center" align="center" border="0" cellpadding="0" cellspacing="0" width="0">
 	<tbody><tr>
 	    <td align="center" width="10%">&nbsp;</td>
-	    
+
 <td width="80%">
 <br>
 <p>&nbsp;</p>
@@ -90,7 +90,7 @@
 <h3 ><strong>Attendee Requirements</strong></h3>
 <hr>
 <p><strong>Target:</strong> Researchers on micro-architecture, high performance processor design, agile development and verification, etc.</p>
-<p><strong>No prior experience with XiangShan/RISC-V/Chisel is necessary. </strong> 
+<p><strong>No prior experience with XiangShan/RISC-V/Chisel is necessary. </strong>
 <p>&nbsp;</p>
 
 <!-- <p>&nbsp;</p>
