Update tutorials link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	    <td align="center" width="0%">&nbsp;</td>
 	    <td align="center" width="100%&quot;">
 		<div style="text-align: center;">
-      <h2><span style="color: rgb(255, 0, 0);"><font face="Helvetica, sans-serif, Arial">[Under Construction]</font></span><span style="color: rgb(255, 0, 0);"><br>
+      <h2><span style="color: rgb(255, 0, 0);"><font face="Helvetica, sans-serif, Arial">[Deprecated. Please go to https://xiangshan-doc.readthedocs.io/zh_CN/latest/tutorials/asplos23/ for the tutorials. ]</font></span><span style="color: rgb(255, 0, 0);"><br>
 		    <br>
 		</span></h2>
 		<h2><span style="color: rgb(0, 0, 255);"><font face="Helvetica, sans-serif, Arial">XiangShan: An Open Source High Performance RISC-V Processor and Infrastructure for Architecture Research</font></span><span style="color: rgb(0, 0, 255);"><br>
@@ -48,6 +48,7 @@
 <hr>
 <a name="main"></a>Over the past decade, agile and open-source hardware has gained increasing attentions in both academia and industry. In 2019, the SIGARCH Visioning Workshop “Agile and Open Hardware for Next-Generation Computing” in conjunction with ISCA invited eleven experts to present their visions on this direction. We believe that open-source hardware design, and more importantly, free and open development infrastructure, has the opportunity to bring more convenience to architecture research and stimulate innovations.
 <p>In this tutorial, we will present our efforts on XiangShan project. XiangShan is an open-source, industry-competitive, high performance RISC-V processor. It has raised the performance ceiling of publicly accessible processors and set the competitive groundwork for future computer architecture research. Behind the processor itself, there is also an agile development platform called Minjie that integrates a broad set of development tools as infrastructure. We will demonstrate how XiangShan, together with Minjie, helps researchers realize their innovative ideas agilely and obtain convincing evaluation results.</p>
+<p>The slides at the tutorial are shared at https://xiangshan-doc.readthedocs.io/zh_CN/latest/tutorials/asplos23/.</p>
 <p></p>
 
 <!-- <p>&nbsp;</p>
